@@ -74,5 +74,8 @@ issue 79: BlockFaceState.update updates only visible state, not texture of faces
 issue 81: you can't move items out of an slot with item-tag-limitation; fixed on: 10.02.2020 by uuk
 issue 82: in some inventories, slot label draw priority was wrong; fixed on: 10.02.2020 by uuk
 issue 83: cobblestone was never created; fixed on: 10.02.2020 by uuk
-issue 21: BlockItemFactory hangs in generating items; fixed on: 10.02.2020 by uuk
-issue 83: fixed bug: clay ball and clay block item generation interfere each other
+issue 21: BlockItemFactory hangs in generating items; fixed on: 11.02.2020 by uuk
+issue 83: clay ball and clay block item generation interfere each other; fixed on: 11.02.2020 by uuk
+issue 84: ModLoader crashes when mod.json links to an not-existing python file; fixed on: 11.02.2020 by uuk
+issue 85: game crashes when using an not-modname prefix for block names; fixed on: 11.02.2020 by uuk
+issue 86: game crashes when using an not-modname prefix in an model name
