@@ -14,6 +14,9 @@ changelog of master-branch
         - debug world doesn't use the state definition correctly
         - can't get items out of an tag-handled slot
         - cobblestone was not arrival
+        - crash when not arrival python file is linked from mod.json file
+        - crash when block-name-prefix is no mod-prefix
+        - crash when model-name-prefix is no mod-prefix
 
 changelog of snapshot 20w07a [released on 10.02.2020]
     based on: rendering update branch 1 & changes to master-branch
